# zen-router

./: .gitignore  Makefile  README.md  pyproject.toml  upload_to_huggingface.py
benchmarks/: README.md  build_profiles.py  checkpoint_map.yaml  prices.yaml  replicate.py  suites.yaml
docs/: config.md  integration.md
eval/: eval_routing.py
examples/: route.py
export/: QUANTIZED.md  export_heads.py  heads.safetensors  route_gguf.py  router_config.json  verify_parity.py
scripts/: quantize.sh
tests/: test_benchmarks.py  test_build_dataset.py
training/: build_dataset.py  catalog.yaml  config.local.yaml  config.scaled.yaml  config.yaml  extract_agentic_dataset.py  extract_local_sessions.py  grpo.py  session_common.py  sft.py
